--- a/package.json
+++ b/package.json
@@ -1,8 +1,8 @@
 {
-  "name": "sharon",
+  "name": "garry",
   "version": "0.1.0",
   "private": true,
-  "homepage": "https://garry85317.github.io/Resume.github.io",
+  "homepage": "https://Garry85317.github.io/Resume.github.io",
   "dependencies": {
     "@emotion/react": "^11.10.4",
     "@emotion/styled": "^11.10.4",
@@ -28,12 +28,6 @@
     "predeploy": "npm run build",
     "deploy": "gh-pages -d build"
   },
-  "eslintConfig": {
-    "extends": [
-      "react-app",
-      "react-app/jest"
-    ]
-  },
   "browserslist": {
     "production": [
       ">0.2%",
@@ -45,5 +39,8 @@
       "last 1 firefox version",
       "last 1 safari version"
     ]
+  },
+  "devDependencies": {
+    "eslint-config-react": "^1.1.7"
   }
 }
