--- a/package.json
+++ b/package.json
@@ -2,7 +2,7 @@
   "name": "garry",
   "version": "0.1.0",
   "private": true,
-  "homepage": "https://Garry85317.github.io/CV",
+  "homepage": "https://Garry85317.github.io/Resume.github.io/CV",
   "dependencies": {
     "@emotion/react": "^11.10.4",
     "@emotion/styled": "^11.10.4",
